# SoulShellNetwork

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: run-tests.yml
config/: routing.py  settings.py  urls.py
src/: decorators.py  help_functions.py  helpers.py  mixins.py  permitions.py
src/articles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/articles/migrations/: 0001_initial.py
src/articles/tests/: test_models.py  test_views.py
src/messenger/: admin.py  apps.py  consumers.py  models.py  urls.py  views.py
src/messenger/migrations/: 0001_initial.py
src/messenger/tests/: test_models.py  test_views.py
src/news/: admin.py  apps.py  models.py  urls.py  views.py
src/news/migrations/: 0001_initial.py
src/news/tests/: test_models.py  test_views.py
src/notifications/: admin.py  apps.py  consumers.py  models.py  urls.py  views.py
src/notifications/migrations/: 0001_initial.py
src/notifications/tests/: test_models.py  test_views.py
src/questions/: forms.py  models.py  urls.py  views.py
src/questions/migrations/: 0001_initial.py
src/questions/tests/: test_models.py  test_views.py
src/search/: apps.py  urls.py  views.py
src/search/tests/: test_views.py
src/templates/articles/: article_create.html  article_list.html  article_update.html
src/templates/messager/: message_list.html
src/templates/news/: news_list.html  news_single.html  news_thread.html
src/templates/questions/: question_detail.html  (+2 more)
src/users/: admin.py  models.py  urls.py  views.py
(+5 files in other folders)
