[tool.poetry]
name = "soulshellnetwork"
version = "0.1.0"
description = ""
authors = ["vaduska <vadimsalapugin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
python-dotenv = "^1.0.0"
cloudinary = "1.31.0"
pillow = "9.4.0"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.6"
pytest-cov = "^4.0.0"
django-test-plus = "2.2.1"
django-markdownx = "^3.0.1"
python-slugify = "^8.0.1"
psycopg2-binary = "2.9.5"
django-taggit = "3.1.0"
channels = "^4.0.0"
setuptools = "^67.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
